# jsonifier-class

./: README.md  jsonifier-class.cabal  stack.yaml
bench/: Main.hs
bench/Main/: JsonifierClass.hs
regression/: Main.hs
