name: jsonifier-class
version: 0.1.1.0
synopsis: Simple JSON instances for Jsonifier library
description:
  Minimalistic library for encoding JSON directly to strict bytestring,
  which is up to 3x faster than \"aeson\".
  .
  For introduction, benchmark results and demo please skip to Readme.
category: JSON
homepage: https://github.com/larthia/jsonifier-class
bug-reports: https://github.com/larthia/jsonifier-class/issues
author: Nicola Bonelli <nicola.bonelli@larthia.com>
maintainer: Nicola Bonelli <nicola.bonelli@larthia.com>
copyright: (c) 2020 Nicola Bonelli
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10
extra-source-files:
  README.md
  samples/*.json

library
  hs-source-dirs: library
  default-extensions: BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  exposed-modules:
    Jsonifier.Class
  other-modules:
    Jsonifier.Time

  build-depends:
    base >=4.11 && <5,
    bytestring >=0.10.10 && <0.12,
    scientific >=0.3.6.2 && <0.4,
    text >=1 && <2,
    time >= 1.9,
    containers >= 0.6,
    unordered-containers >= 0.2,
    array >= 0.5,
    these >= 1.1,
    vector >= 0.12,
    tagged >= 0.8,
    uuid >= 1.3,
    strict >= 0.3,
    jsonifier >= 0.1.0.6,
    ptr-poker >=0.1 && <0.2

test-suite regression
  type: exitcode-stdio-1.0
  hs-source-dirs: regression
  default-extensions: BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    rerebase >=1.6 && <2,
    aeson >= 1.4 && <2,
    hedgehog >=1.0.3 && <2,
    jsonifier,
    numeric-limits >=0.1 && <0.2,
    tasty >= 1.2,
    tasty-hunit >= 0.10,
    these >= 1.1,
    array >= 0.5,
    tagged >= 0.8,
    uuid >= 1.3,
    jsonifier-class

benchmark bench
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  other-modules:
    Main.Aeson
    Main.BufferBuilder
    Main.Jsonifier
    Main.JsonifierClass
    Main.Model
  ghc-options: -O2 -threaded "-with-rtsopts=-N"
  default-extensions: BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  build-depends:
    aeson >=1.4 && <1.6,
    buffer-builder >=0.2.4.7 && <0.3,
    gauge >=0.2.5 && <0.3,
    jsonifier,
    rerebase >=1.6 && <2,
    text-builder >=0.6.6.1 && <0.7,
    jsonifier-class
